# music-serve

./: README.md
music_server/: .gitignore  Dockerfile  LICENSE  docker-compose.yml  manage.py  nginx.conf  pyproject.toml
music_server/music/: models.py  urls.py  views.py
music_server/music/migrations/: 0001_initial.py
music_server/music_server/: asgi.py  settings.py  urls.py  wsgi.py
