[tool.poetry]
name = "music-serve"
version = "0.1.0"
description = ""
authors = ["polarius <tarasov.slavas2002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.7"
gunicorn = "^23.0.0"
psycopg2-binary = "^2.9.10"
django-cors-headers = "^4.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
